--- a/sluzby.html
+++ b/sluzby.html
@@ -121,16 +121,16 @@
                </section>
             <section class="section section_prani vybaveni">
                 <h3 class="section__heading section__heading--absolute">Praní jezdeckého vybavení</h3>
-                <p class="section__text section__text--border">Více informací najdete v ceníku.
+                <p class="section__text section__text--border">Vašeho špinavého koně si musíte vyčistit sami, ale rádi vám vypereme, vydesinfikujeme a naimpregnujeme termodeky, bederní deky a další vybavení pro koně i jezdce. Více informací najdete v ceníku.
                 </p>
                 <div class="img_container_500">
                
                    <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
-                            src="./imgs/narozeniny2.jpg" alt="dětská oslava, vodění na poníkovi"></a>
+                            src="./imgs/fotoprani1.jpeg" alt="špinavý kůň"></a>
                     <figcaption></figcaption>
                 </figure>
                    <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
-                            src="./imgs/narozeniny3.jpg" alt="dětská oslava, vodění na poníkovi"></a>
+                            src="./imgs/fotoprani2.jpg" alt="špinavý kůň"></a>
                     <figcaption></figcaption>
                 </figure>
                 </div>
