--- a/sluzby.html
+++ b/sluzby.html
@@ -126,7 +126,7 @@
                     <figcaption></figcaption>
                 </figure>
                    <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
-                            src="./imgs/fotoprani2.jpg" alt="špinavý kůň"></a>
+                            src="./imgs/fotoprani2.jpeg" alt="špinavý kůň"></a>
                     <figcaption></figcaption>
                 </figure>
                 </div>
