--- a/sluzby.html
+++ b/sluzby.html
@@ -117,8 +117,10 @@
                </section>
             <section class="section section_prani vybaveni">
                 <h3 class="section__heading section__heading--absolute">Praní jezdeckého vybavení</h3>
-                <p class="section__text section__text--border">Vašeho špinavého koně si musíte vyčistit sami, ale rádi vám vypereme, vydesinfikujeme a naimpregnujeme termodeky, bederní deky a další vybavení pro koně i jezdce. Více informací najdete v ceníku.
-                </p>
+                <p class="section__text section__text--border">Vašeho špinavého koně si musíte vyčistit sami, ale rádi vám vypereme, vydesinfikujeme a naimpregnujeme termodeky, bederní deky a další vybavení pro koně i jezdce. Více informací najdete v ceníku.</p>
+                  <div class="year_box year_box--width">
+                <a href="./cenik.html#cenik" class="year_box__text">Ceník</a>
+            </div>
                 <div class="img_container_500">
                
                    <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
