--- a/sluzby.html
+++ b/sluzby.html
@@ -65,7 +65,7 @@
                             </div>
                             <div class="slider_ustajeni__item slider_item slider_item--vybeh swiper-slide">
                                 <span class="slider_item__wraper"></span>
-                                    <p class="slider_item__text">DENNÍ POBYT KONÍ NA TRAVNATÉ PASTVINĚ, V ZIMĚ SENO</p>
+                                    <p class="slider_item__text">DENNÍ POBYT KONÍ NA TRAVNATÉ PASTVINĚ, PASTVINA JE ROZDĚLENÁ A PRAVIDELNĚ UDRŽOVANÁ</p>
                                </div>
                             <div class="slider_ustajeni__item slider_item slider_item--jizdarna swiper-slide">
                                 <span class="slider_item__wraper"></span>
