--- a/sluzby.html
+++ b/sluzby.html
@@ -67,6 +67,12 @@
                                 <span class="slider_item__wraper"></span>
                                     <p class="slider_item__text">DENNÍ POBYT KONÍ NA TRAVNATÉ PASTVINĚ, PASTVINA JE ROZDĚLENÁ A PRAVIDELNĚ UDRŽOVANÁ</p>
                                </div>
+                            
+                            <div class="slider_ustajeni__item slider_item slider_item--vybeh swiper-slide">
+                                <span class="slider_item__wraper"></span>
+                                    <p class="slider_item__text">V ZIMĚ DOKRMOVÁNÍ SENEM NA ZPĚVNĚNÝCH ČÁSTECH PASTVINY</p>
+                               </div>
+                            
                             <div class="slider_ustajeni__item slider_item slider_item--jizdarna swiper-slide">
                                 <span class="slider_item__wraper"></span>
                                     <p class="slider_item__text">MOŽNOST <span class="slider_item__text--red">ZDARMA</span>
