--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
                     <img class="img_wrapper__item" src="./imgs/tabor2026.jpeg"
                         alt="letak na primestsky tabor">
                    </figure>
-                </article>
-                 
+
+               <section class="section main__section">
                       <p class="section__text section__text--border">PF 2026.</p>  
                    <figure class="section__img img_wrapper">
                     <img class="img_wrapper__item" src="./imgs/pf2026.jpeg"
                         alt="PF se skupinou jezdců na koních na zasněžené louce">
                    </figure>
-                </article>
+             <section class="section main__section">
                       <p class="section__text section__text--border">Od ledna letošního roku je aktualizován ceník praní jezdeckých potřeb. Děkujeme za pochopení.</p>        
-             </article>
+            <section class="section main__section">
                       <p class="section__text section__text--border">Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem.  
                      Bližší informace na tel.č. 739 550 505. </p>        
-                </article>
+
             </section>
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Poloha</h3>
